Make sure long links break and don't overflow viewport

--- a/web/app/themes/radcliffe/style.css
+++ b/web/app/themes/radcliffe/style.css
@@ -133,12 +133,8 @@ blockquote:before, blockquote:after {
 	content:"";
 }
 
-/*a { outline:none; }*/
-
 a {
-/*  text-decoration: none;
-  text-decoration-line: none;
-  -moz-text-decoration-line: none;*/
+  word-wrap: break-word;
 }
 
 input,
